# luxegeo

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  README_ECAL.md
.github/workflows/: key4hep.yml  pre-commit.yml
compact/: ECAL_commondefs.xml  LUXETracker.xml  SimpleTracker.xml  TrackerModule.xml  basic_defs.xml  elements.xml  extra_materials.xml  materials.xml  materials_ecal.xml
compact/ECALe/: ECALe_2512.xml  README.md
compact/ECALe_luxe/: ECALe_luxe_2512.xml  ECALe_luxe_v0.xml  ECALe_luxe_v1.xml  ECALe_luxe_v2.xml
compact/ECALe_luxe/visualization/: ECALe_luxe_v1.root  ECALe_luxe_v2.1.root  ECALe_luxe_v2.root
compact/ECALp/: ECALp_2512.xml
compact/ECALp_luxe/: ECALp_luxe_2512.xml  README.md
compact/LUXE/: ECAL_commondefs.xml  LUXE_v0.xml  basic_defs.xml  detector_positions.xml  dipole_field.xml  materials.xml
compact/LUXE/ECALe/: ECALe_2512.xml  ECALe_defs.xml
compact/LUXE/ECALp/: ECALp_2512.xml  ECALp_defs.xml  ECALp_standalone_defs.xml  ECALp_v0.xml
compact/LUXE/Tracker/: LUXETracker.xml  LUXETrackerAsEndcap.xml  Tracker_v0.xml  tracker_defs.xml
compact/Tracker/: LUXETracker.xml  SimpleTracker.xml
src/: LUXEEcal_geo.cpp  LUXETracker_geo.cpp  MLTracker_geo.cpp  SimpleTracker_geo.cpp
tests/: CMakeLists.txt
xml/: LUXETracker.xml  LUXETrackerSimplified.xml  SimpleTracker.xml
